@startuml ansatz
!pragma useIntermediatePackages false

abstract class ansatz.base_ansatz.BaseAnsatz {
  n_qubits: int
}
class ansatz.base_ansatz.AnsatzFactory {
}
class ansatz.he_ansatz.HardwareEfficientCircuit {
  n_layers: None
  entanglement: None
}
class ansatz.uccsd_ansatz.UCCSDCircuit {
  n_layers: None
  n_electrons: None
  singles: None
  doubles: None
  s_wires: None
  d_wires: None
}
ansatz.base_ansatz.BaseAnsatz <|-- ansatz.he_ansatz.HardwareEfficientCircuit
ansatz.base_ansatz.BaseAnsatz <|-- ansatz.uccsd_ansatz.UCCSDCircuit
footer Generated by //py2puml//
@enduml
